--- a/resume.tex
+++ b/resume.tex
@@ -68,7 +68,7 @@ Badstuestræde 18D, 1th \\
     \textbf{Software udvikler \\ 
     og arkitekt} \\ [1ex]
     Edlund A/S \\ 
-    Dec 2008 - Nov 2014  
+    Dec 2008 - Okt 2014  
   \end{Cell}
   \begin{Cell}{3}
     Som software udvikler og arkitekt var det min opgave at \\ [1ex]
@@ -97,7 +97,7 @@ Badstuestræde 18D, 1th \\
     \textbf{Chief Financial \\
     Consultant} \\ [1ex]
     SimCorp \\ 
-    Sep 2000 - Feb 2003  
+    Okt 2000 - Feb 2003  
   \end{Cell}
   \begin{Cell}{3}
     I den afdeling som har ansvaret for matematisk finansielle beregninger i SimCorp Dimension var det min opgave at \\ [1ex]
