Update to reflect new role

--- a/resume.tex
+++ b/resume.tex
@@ -42,7 +42,7 @@ Badstuestræde 18D, 1th \\
 1209 København K \\[1ex]
 2971 2097 \\
 \href{mailto:carstenj@gmail.com}{carstenj@gmail.com} \\
-\href{http://carstenj.io/}{http://carstenj.io/} 
+\href{http://carstenj.io/}{http://carstenj.io/}
 \end{tabular}
 \end{minipage}
 
@@ -52,27 +52,40 @@ Badstuestræde 18D, 1th \\
 \section{Erhvervserfaring}
 \begin{Row}%
   \begin{Cell}{1}
-    \textbf{Løsningsarkitekt} \\ [1ex]
-    Danmarks Nationalbank \\ 
-    Nov 2014 -   
+    \textbf{Lead Software Engineer} \\ [1ex]
+    Danske Bank \\
+    Jan 2016 -
   \end{Cell}
   \begin{Cell}{3}
-    I min rolle som løsningsarkitekt er det mit ansvar at \\ [1ex]
+    Ansat i Derivative Risk and IT teamet, hvor jeg har arbejder med \\ [1ex]
+    $\greysquare$ full-stack udvikling af bankens post trade services til interne og eksterne kunder \\
+    $\greysquare$ udvikling og devops på bankens interne model til Value-at-Risk beregninger \\
+  \end{Cell}
+\end{Row}
+\\[0.5cm]\begin{Row}%
+  \begin{Cell}{1}
+    \textbf{Løsningsarkitekt} \\ [1ex]
+    Danmarks Nationalbank \\
+    Nov 2014 - Dec 2015
+  \end{Cell}
+  \begin{Cell}{3}
+    I min rolle som løsningsarkitekt var det mit ansvar at \\ [1ex]
     $\greysquare$ sikre den tekniske leverance, herunder arkitekturen, for det kommende nationale kreditregister med særlig fokus på sikkerhed og datamængder \\
-    $\greysquare$ Nationalbankens IT-systemer udvikler sig konsistent og i samme retning
+    $\greysquare$ bidrage til, at Nationalbankens IT-systemer udvikler sig konsistent og i samme retning
   \end{Cell}
 \end{Row}
 \\[0.5cm]
 \begin{Row}
   \begin{Cell}{1}
-    \textbf{Software udvikler \\ 
+    \textbf{Software udvikler \\
     og arkitekt} \\ [1ex]
-    Edlund A/S \\ 
-    Dec 2008 - Okt 2014  
+    Edlund A/S \\
+    Dec 2008 - Okt 2014
   \end{Cell}
   \begin{Cell}{3}
-    Som software udvikler og arkitekt var det min opgave at \\ [1ex]
-    $\greysquare$ sparre med PFA's forretningsanalytikere omkring krav til PFA$+$ samt udvikle og implementere den overordnede arkitektur og løsning \\
+    Som software udvikler og arkitekt var det min opgave at udvikle software baseret på forsikringsmatematiske principper og \\ [1ex]
+    $\greysquare$ sparre med PFA's forretningsanalytikere omkring krav til PFA$+$ samt udvikle og
+    implementere den overordnede arkitektur og løsning primært omkring Unitlink \\
     $\greysquare$ deltage i udviklingen af nyt standard rammesystem til Nordea Liv og Pension \\
     $\greysquare$ have den daglige kontakt til Skandia og ansvaret for udvikling af deres kundespecifikke ønsker
   \end{Cell}
@@ -81,14 +94,14 @@ Badstuestræde 18D, 1th \\
 \begin{Row}%
   \begin{Cell}{1}
     \textbf{Software udvikler} \\ [1ex]
-    Microsoft \\ 
-    Mar 2003 - Nov 2008  
+    Microsoft \\
+    Mar 2003 - Nov 2008
   \end{Cell}
   \begin{Cell}{3}
     I mine 5 år hos Microsoft arbejdede jeg på tre større projekter, hvor jeg \\ [1ex]
     $\greysquare$ havde ansvaret for front-end delen af en ny "Sales and Operations Planning" feature til næste version af AX \\
     $\greysquare$ havde medansvar i AX-kerneudvikling til Microsoft Dynamics AX 4.0 \\
-    $\greysquare$ deltog i udviklingen af innovativt ERP prototype projekt baseret på SOA arkitektur og en rolle baseret konfigurerbar opsætning af forretningsprocesser. 
+    $\greysquare$ deltog i udviklingen af innovativt ERP prototype projekt baseret på SOA arkitektur og en rolle baseret konfigurerbar opsætning af forretningsprocesser.
   \end{Cell}
 \end{Row}
 \\[0.5cm]
@@ -96,8 +109,8 @@ Badstuestræde 18D, 1th \\
   \begin{Cell}{1}
     \textbf{Chief Financial \\
     Consultant} \\ [1ex]
-    SimCorp \\ 
-    Okt 2000 - Feb 2003  
+    SimCorp \\
+    Okt 2000 - Feb 2003
   \end{Cell}
   \begin{Cell}{3}
     I den afdeling som har ansvaret for matematisk finansielle beregninger i SimCorp Dimension var det min opgave at \\ [1ex]
@@ -110,8 +123,8 @@ Badstuestræde 18D, 1th \\
   \begin{Cell}{1}
     \textbf{Senior Kvantitativ \\
     Analytiker} \\ [1ex]
-    Nordea Markets \\ 
-    Oct 1997 - Sep 2000  
+    Nordea Markets \\
+    Oct 1997 - Sep 2000
   \end{Cell}
   \begin{Cell}{3}
     Som analytiker var jeg med til at \\ [1ex]
@@ -124,8 +137,8 @@ Badstuestræde 18D, 1th \\
 \begin{Row}%
   \begin{Cell}{1}
     \textbf{Software udvikler} \\ [1ex]
-    SimCorp \\ 
-    Aug 1995 - Sept 1997 
+    SimCorp \\
+    Aug 1995 - Sept 1997
   \end{Cell}
   \begin{Cell}{3}
     Som software udvikler var det min opgave at deltage i \\ [1ex]
@@ -142,7 +155,7 @@ Badstuestræde 18D, 1th \\
 \begin{Row}%
   \begin{Cell}{1}
     \textbf{Softwareudvikling} \\[1ex]
-    2002 - 2006 
+    2002 - 2006
   \end{Cell}
   \begin{Cell}{3}
     IT Universitetet. Kurser i database og distribuerede systemer, algoritmer og datastrukturer, programmeringssprog samt avanceret objekt-orienteret programmering
@@ -152,17 +165,17 @@ Badstuestræde 18D, 1th \\
 \begin{Row}%
   \begin{Cell}{1}
     \textbf{Visiting Member} \\[1ex]
-    1999 
+    1999
   \end{Cell}
   \begin{Cell}{3}
-    Courant Institute of Mathematical Sciences, New York University. Mathematics of Finance program
+    Courant Institute of Mathematical Sciences, New York University. Mathematics of Finance program. Finansieret af Andersens Rejselegat for Matematikere.
   \end{Cell}
 \end{Row}
 \\[0.5cm]
 \begin{Row}%
   \begin{Cell}{1}
     \textbf{Erasmus} \\[1ex]
-    1992 - 1993 
+    1992 - 1993
   \end{Cell}
   \begin{Cell}{3}
     University of Leeds, England. Anvendt statistik og ikke-kommutativ algebra
@@ -172,7 +185,7 @@ Badstuestræde 18D, 1th \\
 \begin{Row}%
   \begin{Cell}{1}
     \textbf{Cand.Scient. Matematik \\ og Statistik} \\[1ex]
-    1988 - 1995 
+    1988 - 1995
   \end{Cell}
   \begin{Cell}{3}
     Københavns Universitet. Numerisk analyse og målteori
@@ -180,7 +193,7 @@ Badstuestræde 18D, 1th \\
 \end{Row}
 
 %==============================================================================
-% Diverse 
+% Diverse
 %==============================================================================
 \section{Kompetencer}
 \begin{Row}%
@@ -199,7 +212,7 @@ Badstuestræde 18D, 1th \\
     og platforme
   \end{Cell}
   \begin{Cell}{3}
-    Visual Studio Windows, SQL Server, Git, Github, Mercurial, Jira, Nunit, ReSharper og Rstudio
+    Visual Studio Windows, SQL Server, Git, Github, Mercurial, TFS, Nunit, ReSharper og Rstudio
   \end{Cell}
 \end{Row}
 \\[0.5cm]
@@ -213,7 +226,7 @@ Badstuestræde 18D, 1th \\
 \end{Row}
 
 %==============================================================================
-% Kurser 
+% Kurser
 %==============================================================================
 \section{Udvalgte kurser}
 \begin{Row}%
@@ -262,5 +275,7 @@ Badstuestræde 18D, 1th \\
 \end{Row}
 
 \section{Anbefaling og referencer}
-Se venligst min \href{https://dk.linkedin.com/in/carstenjoergensen}{LinkedIn} profil for en række anbefalinger. 
+Se venligst min \href{https://dk.linkedin.com/in/carstenjoergensen}{LinkedIn} profil for en række anbefalinger.
+\\[0.25cm]
+Personlige referencer med tidligere ledere på forespørgsel.
 \end{document}
