Minor updates according to chktex suggestions

--- a/resume.tex
+++ b/resume.tex
@@ -54,7 +54,7 @@ Badstuestræde 18D, 1th \\
   \begin{Cell}{1}
     \textbf{Lead Software Engineer} \\ [1ex]
     Danske Bank \\
-    Jan 2016 -
+    Jan 2016 -- % chktex 8
   \end{Cell}
   \begin{Cell}{3}
     Ansat i Derivative Risk and IT teamet, hvor jeg har arbejder med \\ [1ex]
@@ -66,11 +66,11 @@ Badstuestræde 18D, 1th \\
   \begin{Cell}{1}
     \textbf{Løsningsarkitekt} \\ [1ex]
     Danmarks Nationalbank \\
-    Nov 2014 - Dec 2015
+    Nov 2014 -- Dec 2015 % chktex 8
   \end{Cell}
   \begin{Cell}{3}
     I min rolle som løsningsarkitekt var det mit ansvar at \\ [1ex]
-    $\greysquare$ sikre den tekniske leverance, herunder arkitekturen, for det kommende nationale kreditregister med særlig fokus på sikkerhed og datamængder \\
+    $\greysquare$ sikre den tekniske leverance, herunder arkitekturen, for det kommende nationale kreditregister med særlig fokus på IT-sikkerhed og datamængder \\
     $\greysquare$ bidrage til, at Nationalbankens IT-systemer udvikler sig konsistent og i samme retning
   \end{Cell}
 \end{Row}
@@ -80,7 +80,7 @@ Badstuestræde 18D, 1th \\
     \textbf{Software udvikler \\
     og arkitekt} \\ [1ex]
     Edlund A/S \\
-    Dec 2008 - Okt 2014
+    Dec 2008 -- Okt 2014 % chktex 8
   \end{Cell}
   \begin{Cell}{3}
     Som software udvikler og arkitekt var det min opgave at udvikle software baseret på forsikringsmatematiske principper og \\ [1ex]
@@ -95,11 +95,11 @@ Badstuestræde 18D, 1th \\
   \begin{Cell}{1}
     \textbf{Software udvikler} \\ [1ex]
     Microsoft \\
-    Mar 2003 - Nov 2008
+    Mar 2003 -- Nov 2008 % chktex 8
   \end{Cell}
   \begin{Cell}{3}
     I mine 5 år hos Microsoft arbejdede jeg på tre større projekter, hvor jeg \\ [1ex]
-    $\greysquare$ havde ansvaret for front-end delen af en ny "Sales and Operations Planning" feature til næste version af AX \\
+    $\greysquare$ havde ansvaret for front-end delen af en ny ``Sales and Operations Planning'' feature til næste version af AX \\
     $\greysquare$ havde medansvar i AX-kerneudvikling til Microsoft Dynamics AX 4.0 \\
     $\greysquare$ deltog i udviklingen af innovativt ERP prototype projekt baseret på SOA arkitektur og en rolle baseret konfigurerbar opsætning af forretningsprocesser.
   \end{Cell}
@@ -110,7 +110,7 @@ Badstuestræde 18D, 1th \\
     \textbf{Chief Financial \\
     Consultant} \\ [1ex]
     SimCorp \\
-    Okt 2000 - Feb 2003
+    Okt 2000 -- Feb 2003 % chktex 8
   \end{Cell}
   \begin{Cell}{3}
     I den afdeling som har ansvaret for matematisk finansielle beregninger i SimCorp Dimension var det min opgave at \\ [1ex]
@@ -124,7 +124,7 @@ Badstuestræde 18D, 1th \\
     \textbf{Senior Kvantitativ \\
     Analytiker} \\ [1ex]
     Nordea Markets \\
-    Oct 1997 - Sep 2000
+    Oct 1997 -- Sep 2000 % chktex 8
   \end{Cell}
   \begin{Cell}{3}
     Som analytiker var jeg med til at \\ [1ex]
@@ -138,7 +138,7 @@ Badstuestræde 18D, 1th \\
   \begin{Cell}{1}
     \textbf{Software udvikler} \\ [1ex]
     SimCorp \\
-    Aug 1995 - Sept 1997
+    Aug 1995 -- Sept 1997 % chktex 8
   \end{Cell}
   \begin{Cell}{3}
     Som software udvikler var det min opgave at deltage i \\ [1ex]
@@ -155,7 +155,7 @@ Badstuestræde 18D, 1th \\
 \begin{Row}%
   \begin{Cell}{1}
     \textbf{Softwareudvikling} \\[1ex]
-    2002 - 2006
+    2002 -- 2006 % chktex 8
   \end{Cell}
   \begin{Cell}{3}
     IT Universitetet. Kurser i database og distribuerede systemer, algoritmer og datastrukturer, programmeringssprog samt avanceret objekt-orienteret programmering
@@ -175,7 +175,7 @@ Badstuestræde 18D, 1th \\
 \begin{Row}%
   \begin{Cell}{1}
     \textbf{Erasmus} \\[1ex]
-    1992 - 1993
+    1992 -- 1993 % chktex 8
   \end{Cell}
   \begin{Cell}{3}
     University of Leeds, England. Anvendt statistik og ikke-kommutativ algebra
@@ -185,7 +185,7 @@ Badstuestræde 18D, 1th \\
 \begin{Row}%
   \begin{Cell}{1}
     \textbf{Cand.Scient. Matematik \\ og Statistik} \\[1ex]
-    1988 - 1995
+    1988 -- 1995 % chktex 8
   \end{Cell}
   \begin{Cell}{3}
     Københavns Universitet. Numerisk analyse og målteori
@@ -202,7 +202,7 @@ Badstuestræde 18D, 1th \\
     og frameworks
   \end{Cell}
   \begin{Cell}{3}
-    Produktionserfaring med: C\#, .NET, WCP, WPF, LINQ, Rx, SQL, C++, STL, Boost og C Derudover: kendskab til F\#, Scala, Java, JavaScript, R og MongoDB
+    Produktionserfaring med: C\#, .NET, WCP, WPF, LINQ, Rx, SQL, C++, STL, Boost og C Derudover: kendskab til F\#, Scala, Java, JavaScript, R og MongoDB % chktex 26,
   \end{Cell}
 \end{Row}
 \\[0.5cm]
