--- a/resume.tex
+++ b/resume.tex
@@ -3,7 +3,7 @@
 
 \usepackage{fontspec}
 \usepackage{polyglossia}
-\usepackage[left=1.5cm, right=1.5cm, vmargin=1.5cm,noheadfoot,marginparwidth=0cm]{geometry}
+\usepackage[left=1.5cm, right=1.5cm, vmargin=1.5cm, noheadfoot, marginparwidth=0cm]{geometry}
 \usepackage[final]{microtype}
 \usepackage{titlesec}
 \usepackage{color}
@@ -13,8 +13,8 @@
 \usepackage{hyperref}
 \usepackage{marvosym}
 
-\setmainfont[Ligatures=TeX]{Apercu Light}
-\setmonofont{Apercu Mono}
+\setmainfont[Ligatures=TeX]{Calibri}
+\setmonofont{Alma Mono}
 \setlength{\parindent}{0pt}
 \titleformat{\section}{\Large\scshape\raggedright\color{red}}{}{0em}{}
 \newcommand*{\greysquare}{\textcolor{gray}{\blacksquare}}
@@ -26,9 +26,9 @@
 
 \begin{document}
 
-%==============================================================================
+%===============================================================================
 % Kontakt info
-%==============================================================================
+%===============================================================================
 \begin{minipage}[t][2cm][t]{.5\textwidth}
 \begin{tabular}{@{}l@{}} % @{} removes tabular outer padding
 \\
@@ -43,7 +43,7 @@
 \begin{tabular}{l}
 Badstuestræde 18D, 1th \\
 1209 København K \\[1ex]
-\Telefon{ 2971 2097} \\
+\Telefon{ +45 2971 2097} \\
 \Letter{ \href{mailto:carstenj@gmail.com}{carstenj@gmail.com}} \\
 \Mundus{ \href{http://carstenj.io/}{http://carstenj.io/}}
 \end{tabular}
@@ -61,8 +61,10 @@ Badstuestræde 18D, 1th \\
   \end{Cell}
   \begin{Cell}{3}
     Ansat i Derivative Risk and IT, hvor jeg arbejder med \\ [1ex]
-    $\greysquare$ full-stack udvikling af post trade services til både internt brug og eksterne kunder \\
-    $\greysquare$ udvikling og devops på bankens interne model til Value-at-Risk beregninger \\
+    $\greysquare$ full-stack udvikling af post trade services til både internt
+    brug og eksterne kunder \\
+    $\greysquare$ udvikling og devops på bankens interne model til Value-at-Risk
+     beregninger \\
   \end{Cell}
 \end{Row}
 \\[0.5cm]\begin{Row}%
@@ -73,8 +75,11 @@ Badstuestræde 18D, 1th \\
   \end{Cell}
   \begin{Cell}{3}
     I rollen som løsningsarkitekt var det mit ansvar at \\ [1ex]
-    $\greysquare$ sikre den tekniske leverance, herunder arkitekturen, for det kommende nationale kreditregister med særlig fokus på IT-sikkerhed og datamængder \\
-    $\greysquare$ bidrage til, at Nationalbankens IT-systemer udvikler sig konsistent og i samme retning
+    $\greysquare$ sikre den tekniske leverance, herunder arkitekturen, for det
+    kommende nationale kreditregister med særlig fokus på IT-sikkerhed og
+    datamængder \\
+    $\greysquare$ bidrage til, at Nationalbankens IT-systemer udvikler sig
+    konsistent og i samme retning
   \end{Cell}
 \end{Row}
 \\[0.5cm]
@@ -86,11 +91,15 @@ Badstuestræde 18D, 1th \\
     Dec 2008 -- Okt 2014 % chktex 8
   \end{Cell}
   \begin{Cell}{3}
-    Som softwareudvikler og arkitekt var det min opgave at udvikle software baseret på forsikringsmatematiske principper og \\ [1ex]
-    $\greysquare$ sparre med PFA's forretningsanalytikere omkring krav til PFA$+$ samt udvikle og
-    implementere den overordnede arkitektur og løsning primært omkring Unitlink \\
-    $\greysquare$ deltage i udviklingen af nyt standard rammesystem til Nordea Liv og Pension \\
-    $\greysquare$ have den daglige kontakt til Skandia og ansvaret for udvikling af deres kundespecifikke ønsker
+    Som softwareudvikler og arkitekt var det min opgave at udvikle software
+    baseret på forsikringsmatematiske principper og \\ [1ex]
+    $\greysquare$ sparre med PFA's forretningsanalytikere omkring krav til
+    PFA$+$ samt udvikle og implementere den overordnede arkitektur og løsning
+    primært omkring Unitlink \\
+    $\greysquare$ deltage i udviklingen af nyt standard rammesystem til Nordea
+    Liv og Pension \\
+    $\greysquare$ have den daglige kontakt til Skandia og ansvaret for udvikling
+    af deres kundespecifikke ønsker
   \end{Cell}
 \end{Row}
 \\[0.5cm]
@@ -101,10 +110,15 @@ Badstuestræde 18D, 1th \\
     Mar 2003 -- Nov 2008 % chktex 8
   \end{Cell}
   \begin{Cell}{3}
-    I mine 5 år hos Microsoft arbejdede jeg på tre større projekter, hvor jeg \\ [1ex]
-    $\greysquare$ havde ansvaret for front-end delen af en ny ``Sales and Operations Planning'' feature til næste version af AX \\
-    $\greysquare$ havde medansvar i AX-kerneudvikling til Microsoft Dynamics AX 4.0 \\
-    $\greysquare$ deltog i udviklingen af innovativt ERP prototype projekt baseret på SOA arkitektur og en rolle baseret konfigurerbar opsætning af forretningsprocesser.
+    I mine 5 år hos Microsoft arbejdede jeg på tre større projekter, hvor
+    jeg \\ [1ex]
+    $\greysquare$ havde ansvaret for front-end delen af en ny ``Sales and
+    Operations Planning'' feature til næste version af AX \\
+    $\greysquare$ havde medansvar i AX-kerneudvikling til Microsoft Dynamics AX
+    4.0 \\
+    $\greysquare$ deltog i udviklingen af innovativt ERP prototype projekt
+    baseret på SOA arkitektur og en rolle baseret konfigurerbar opsætning af
+    forretningsprocesser.
   \end{Cell}
 \end{Row}
 \\[0.5cm]
@@ -116,9 +130,12 @@ Badstuestræde 18D, 1th \\
     Okt 2000 -- Feb 2003 % chktex 8
   \end{Cell}
   \begin{Cell}{3}
-    I den afdeling som har ansvaret for matematisk finansielle beregninger i SimCorp Dimension var det min opgave at \\ [1ex]
-    $\greysquare$ deltage i refaktoreringen af beregningsmotoren fra C til C$++$ med primært ansvar for optimeringsalgoritmer \\
-    $\greysquare$ være ansvarlig for afdelingen software releases og konfigurationsstyring
+    I den afdeling som har ansvaret for matematisk finansielle beregninger i
+    SimCorp Dimension var det min opgave at \\ [1ex]
+    $\greysquare$ deltage i refaktoreringen af beregningsmotoren fra C til C$++$
+    med primært ansvar for optimeringsalgoritmer \\
+    $\greysquare$ være ansvarlig for afdelingen software releases og
+    konfigurationsstyring
   \end{Cell}
 \end{Row}
 \\[0.5cm]
@@ -131,9 +148,11 @@ Badstuestræde 18D, 1th \\
   \end{Cell}
   \begin{Cell}{3}
     Som analytiker var jeg med til at \\ [1ex]
-    $\greysquare$ udvikle funktionalitet og Excel løsninger til Nordea Analytics platformen \\
+    $\greysquare$ udvikle funktionalitet og Excel løsninger til Nordea Analytics
+    platformen \\
     $\greysquare$ udvikle Markets interne system til realkreditmodellering \\
-    $\greysquare$ implementere, teste og konvertere et ældre system til Infinity Financial Technology systemet med ansvar for rentederivater
+    $\greysquare$ implementere, teste og konvertere et ældre system til Infinity
+    Financial Technology systemet med ansvar for rentederivater
   \end{Cell}
 \end{Row}
 \\[0.5cm]
@@ -146,14 +165,16 @@ Badstuestræde 18D, 1th \\
   \begin{Cell}{3}
     Som software udvikler var det min opgave at deltage i \\ [1ex]
     $\greysquare$ den årlige release af en række Excel add-ins \\
-    $\greysquare$ koordineringen af en tværafdelings udviklingsopgave af et modul til Ka\-pi\-tal\-dæk\-nings\-di\-rek\-ti\-vet \\
-    $\greysquare$ udviklingen af matematisk finansielt bibliotek i C med tilhørende unit tests
+    $\greysquare$ koordineringen af en tværafdelings udviklingsopgave af et
+    modul til Ka\-pi\-tal\-dæk\-nings\-di\-rek\-ti\-vet \\
+    $\greysquare$ udviklingen af matematisk finansielt bibliotek i C med
+    tilhørende unit tests
   \end{Cell}
 \end{Row}
 
-%==============================================================================
+%===============================================================================
 % Uddannelse afsnit
-%==============================================================================
+%===============================================================================
 \section{Uddannelse}
 \begin{Row}%
   \begin{Cell}{1}
@@ -199,9 +220,9 @@ Badstuestræde 18D, 1th \\
   \end{Cell}
 \end{Row}
 
-%==============================================================================
+%===============================================================================
 % Diverse
-%==============================================================================
+%===============================================================================
 \section{Kompetencer}
 \begin{Row}%
   \begin{Cell}{1}
@@ -209,8 +230,10 @@ Badstuestræde 18D, 1th \\
     og frameworks
   \end{Cell}
   \begin{Cell}{3}
-    Produktionserfaring med: C\#, .NET, WCP, WPF, LINQ, Rx, SQL, C++, STL, Boost % chktex 26,
-    og C Derudover: kendskab til F\#, Scala, Python, Java, JavaScript, R og MongoDB
+    Produktionserfaring med: C\#, .NET, WCP, WPF, LINQ, Rx, SQL,  % chktex 26,
+    C++, STL, Boost og C \\
+    Derudover: kendskab til F\#, Scala, Python, Java, JavaScript, R og
+    MongoDB
   \end{Cell}
 \end{Row}
 \\[0.5cm]
@@ -240,9 +263,9 @@ Badstuestræde 18D, 1th \\
   \end{Cell}
 \end{Row}
 
-%==============================================================================
+%===============================================================================
 % Kurser
-%==============================================================================
+%===============================================================================
 \section{Udvalgte kurser}
 \begin{Row}%
   \begin{Cell}{1}
