--- a/resume.tex
+++ b/resume.tex
@@ -202,7 +202,7 @@ Badstuestræde 18D, 1th \\
 \\[0.5cm]
 \begin{Row}%
   \begin{Cell}{1}
-    \textbf{Erasmus} \\[1ex]
+    \textbf{Erasmus udvekslings-\\ program} \\[1ex]
     1992 -- 1993 % chktex 8
   \end{Cell}
   \begin{Cell}{3}
@@ -230,21 +230,36 @@ Badstuestræde 18D, 1th \\
     og frameworks
   \end{Cell}
   \begin{Cell}{3}
-    Produktionserfaring med: C\#, .NET, WCP, WPF, LINQ, Rx, SQL,  % chktex 26,
+    Produktionserfaring med: C\#, .NET, WCP, WPF, LINQ, Rx, SQL, Nunit,  % chktex 26,
     C++, STL, Boost og C \\
-    Derudover: kendskab til F\#, Scala, Python, Java, JavaScript, R og
-    MongoDB
+    Derudover kendskab til F\#, Scala, Python, Java, JavaScript og R
   \end{Cell}
 \end{Row}
 \\[0.5cm]
 \begin{Row}%
   \begin{Cell}{1}
-    Værktøjer \\[1ex]
-    og platforme
+    Udviklingsværktøjer
   \end{Cell}
   \begin{Cell}{3}
-    Visual Studio, SQL Server, Git, Github, Mercurial, TFS, Nunit, Xamarin
+    Visual Studio, Visual Studio Code, SQL Server Management Studio, Xamarin
     Studio, ReSharper og RStudio
+  \end{Cell}
+\end{Row}
+\\[0.5cm]
+\begin{Row}%
+  \begin{Cell}{1}
+    Data systemer
+  \end{Cell}
+  \begin{Cell}{3}
+    SQL Server, RabbitMQ og MongoDB
+  \end{Cell}
+\end{Row}
+\\[0.5cm]\begin{Row}%
+  \begin{Cell}{1}
+    DevOps tools
+  \end{Cell}
+  \begin{Cell}{3}
+    ELK (ElasticSearch, Logstach, Kibana), Serilog, InfluxDB, Grafana, GoCD, Git, Github, Mercurial, TFS
   \end{Cell}
 \end{Row}
 \\[0.5cm]
