--- a/resume.tex
+++ b/resume.tex
@@ -52,6 +52,17 @@ Badstuestræde 18D, 1th \\
 %==============================================================================
 % Erhvervserfaring
 %==============================================================================
+\section{Kort fortalt}
+21+ års erfaring med professionel software udvikling af large scale systemer
+til primært til den finansielle sektor. Erfaring med matematisk modellering
+indenfor områderne finans, optimering og supply chain management. Omfattende
+forretningsviden på tre områder: pension (6 år), finans, bank og capital
+markets (10 år) og ERP systemer (5 år). Mit kendetegn er levering til tiden
+i den ønskede kvalitet mens min største styrke er at kunne fungere som
+bindeled mellem forretning og udvikling.
+%==============================================================================
+% Erhvervserfaring
+%==============================================================================
 \section{Erhvervserfaring}
 \begin{Row}%
   \begin{Cell}{1}
@@ -219,9 +230,8 @@ Badstuestræde 18D, 1th \\
     Københavns Universitet. Numerisk analyse og målteori
   \end{Cell}
 \end{Row}
-
 %===============================================================================
-% Diverse
+% Kompetencer
 %===============================================================================
 \section{Kompetencer}
 \begin{Row}%
@@ -262,22 +272,6 @@ Badstuestræde 18D, 1th \\
     ELK (ElasticSearch, Logstach, Kibana), Serilog, InfluxDB, Grafana, GoCD, Git, Github, Mercurial, TFS
   \end{Cell}
 \end{Row}
-\\[0.5cm]
-\begin{Row}%
-  \begin{Cell}{1}
-    Kort fortalt
-  \end{Cell}
-  \begin{Cell}{3}
-    21+ års erfaring med professionel software udvikling af large scale systemer
-    til primært til den finansielle sektor. Erfaring med matematisk modellering
-    indenfor områderne finans, optimering og supply chain management. Omfattende
-    forretningsviden på tre områder: pension (6 år), finans, bank og capital
-    markets (10 år) og ERP systemer (5 år). Mit kendetegn er levering til tiden
-    i den ønskede kvalitet mens min største styrke er at kunne fungere som
-    bindeled mellem forretning og udvikling.
-  \end{Cell}
-\end{Row}
-
 %===============================================================================
 % Kurser
 %===============================================================================
