Opdatering af CV

--- a/resume.tex
+++ b/resume.tex
@@ -56,8 +56,8 @@ Badstuestræde 18D, 1th \\
 21+ års erfaring med professionel software udvikling af large scale systemer
 til primært til den finansielle sektor. Erfaring med matematisk modellering
 indenfor områderne finans, optimering og supply chain management. Omfattende
-forretningsviden på tre områder: pension (6 år), finans, bank og capital
-markets (10 år) og ERP systemer (5 år). Mit kendetegn er levering til tiden
+forretningsviden på områderne pension (6 år), finans, bank og capital
+markets (10 år) samt ERP systemer (5 år). Mit kendetegn er levering til tiden
 i den ønskede kvalitet mens min største styrke er at kunne fungere som
 bindeled mellem forretning og udvikling.
 %==============================================================================
@@ -72,7 +72,7 @@ bindeled mellem forretning og udvikling.
   \end{Cell}
   \begin{Cell}{3}
     Ansat i Derivative Risk and IT, hvor jeg arbejder med \\ [1ex]
-    $\greysquare$ full-stack udvikling af post trade services til både internt
+    $\greysquare$ 360-graders udvikling af post trade services til både internt
     brug og eksterne kunder \\
     $\greysquare$ udvikling og devops på bankens interne model til Value-at-Risk
      beregninger \\
@@ -269,7 +269,7 @@ bindeled mellem forretning og udvikling.
     DevOps tools
   \end{Cell}
   \begin{Cell}{3}
-    ELK (ElasticSearch, Logstach, Kibana), Serilog, InfluxDB, Grafana, GoCD, Git, Github, Mercurial, TFS
+    Elastic Stack, Serilog, InfluxDB, Grafana, GoCD, Git, Github, Mercurial, TFS
   \end{Cell}
 \end{Row}
 %===============================================================================
