Afsnit om frivilligt arbejde

--- a/resume.tex
+++ b/resume.tex
@@ -329,6 +329,29 @@ bindeled mellem forretning og udvikling.
   \end{Cell}
 \end{Row}
 
+
+\section{Frivilligt arbejde}
+\begin{Row}%
+  \begin{Cell}{1}
+    \textbf{Webmatematik} \\ [1ex]
+    Juni 2017 -- % chktex 8
+  \end{Cell}
+  \begin{Cell}{3}
+    Frivillig skribent på \href{http://www.webmatematik.dk}{www.webmatematik.dk}
+  \end{Cell}
+\end{Row}
+\\[0.5cm]\begin{Row}%
+  \begin{Cell}{1}
+    \textbf{Dansk Flygtningehjælp} \\ [1ex]
+    Jan 2014 -- Maj 2014 % chktex 8
+  \end{Cell}
+  \begin{Cell}{3}
+    Frivilling i lektiecafe på Vesterbros Bibliotek, hvor jeg hjalp folkeskole elever
+    med deres ma\-te\-ma\-tik opgaver.
+  \end{Cell}
+\end{Row}
+
+
 \section{Anbefaling og referencer}
 Se venligst min \href{https://dk.linkedin.com/in/carstenjoergensen}{LinkedIn}
 profil for en række anbefalinger.
