--- a/resume.tex
+++ b/resume.tex
@@ -53,13 +53,13 @@ Badstuestræde 18D, 1th \\
 % Erhvervserfaring
 %==============================================================================
 \section{Kort fortalt}
-21+ års erfaring med professionel software udvikling af large scale systemer
-til primært til den finansielle sektor. Erfaring med matematisk modellering
+22+ års erfaring med professionel software udvikling af large scale systemer primært til den finansielle sektor. Erfaring med matematisk modellering
 indenfor områderne finans, optimering og supply chain management. Omfattende
 forretningsviden på områderne pension (6 år), finans, bank og capital
-markets (10 år) samt ERP systemer (5 år). Mit kendetegn er levering til tiden
+markets (11 år) samt ERP systemer (5 år). Mit kendetegn er levering til tiden
 i den ønskede kvalitet mens min største styrke er at kunne fungere som
 bindeled mellem forretning og udvikling.
+
 %==============================================================================
 % Erhvervserfaring
 %==============================================================================
@@ -230,6 +230,7 @@ bindeled mellem forretning og udvikling.
     Københavns Universitet. Numerisk analyse og målteori
   \end{Cell}
 \end{Row}
+
 %===============================================================================
 % Kompetencer
 %===============================================================================
@@ -272,6 +273,7 @@ bindeled mellem forretning og udvikling.
     Elastic Stack, Serilog, InfluxDB, Grafana, GoCD, Git, Github, Mercurial, TFS
   \end{Cell}
 \end{Row}
+
 %===============================================================================
 % Kurser
 %===============================================================================
@@ -329,7 +331,6 @@ bindeled mellem forretning og udvikling.
   \end{Cell}
 \end{Row}
 
-
 \section{Frivilligt arbejde}
 \begin{Row}%
   \begin{Cell}{1}
@@ -346,11 +347,9 @@ bindeled mellem forretning og udvikling.
     Jan 2014 -- Maj 2014 % chktex 8
   \end{Cell}
   \begin{Cell}{3}
-    Frivilling i lektiecafe på Vesterbros Bibliotek, hvor jeg hjalp folkeskole elever
-    med deres ma\-te\-ma\-tik opgaver.
+    Frivilling i lektiecafe på Vesterbros Bibliotek, hvor jeg hjalp folkeskoleelever med deres ma\-te\-ma\-tik opgaver.
   \end{Cell}
 \end{Row}
-
 
 \section{Anbefaling og referencer}
 Se venligst min \href{https://dk.linkedin.com/in/carstenjoergensen}{LinkedIn}
